# magic-hackathon

./: .gitignore  README.md  pyproject.toml
src/: api_utils.py  app.py  app_local.py  app_local_no_qr.py  app_no_qr.py  email_utils.py  face_segmenter.py  local_pipeline.py  make_card.py  prompts.py  qr.py  sam_predict.py  test.ipynb
src/flask_app/: app.py  flask_app.py
src/flask_app/templates/: index.html  result.html
